# auto-ui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.cn.md  README.md  counter.au  install-stdlib.bat  install-stdlib.ps1  ui.ac  uninstall-stdlib.bat
.cargo/: config.toml
auto-examples/: INDEX.md  QUICK_REFERENCE.md  README.md
crates/: README.md
crates/auto-ui/: Cargo.toml
crates/auto-ui-gpui/: Cargo.toml
crates/auto-ui-gpui-examples/: Cargo.toml
crates/auto-ui-gpui/examples/: auto_ui_run_minimal_counter.rs  auto_ui_run_working_counter.rs  counter_manual.rs  counter_test.rs  hello_auto.rs  run_col.rs  run_generated.rs
crates/auto-ui-gpui/src/: auto_render.rs  auto_render_v1.rs  event_router.rs  interpreter_component.rs  lib.rs  vnode_entity.rs
crates/auto-ui-iced-examples/: Cargo.toml
crates/auto-ui-transpiler-cli/: Cargo.toml  README.md
crates/auto-ui-transpiler-cli/src/: error.rs  main.rs
crates/auto-ui/examples/: all_components.rs  button.at  counter.at  counter.rs  counter_component.rs  debug_ast.rs  dock.at  docks.at  docks.rs  dyna_hello.at  dyna_hello.rs  form.rs  gen.rs  hello.at  hello.rs  hello_data.at  login.at  login.rs  mark.at  mark.rs  story.rs  style_demo.rs  style_demo_l2.rs  style_demo_l3.rs  styled_counter.rs  styling_showcase.rs  table.at  table.rs  verify_generated.rs
crates/auto-ui/src/: app.rs  assets.rs  bridge.rs  component.rs  dyna.rs  hot_reload.rs  layout.rs  lib.rs  node_converter.rs  pane.rs  story.rs  trans.rs  view.rs  vnode.rs  vnode_converter.rs  widget.rs  widgets.rs
crates/auto-ui/src/cli/: error.rs  mod.rs
crates/auto-ui/src/dyna/: button.rs  label.rs  pen.rs  snip.rs  story.rs
crates/auto-ui/src/interpreter/: bridge.rs  mod.rs
crates/auto-ui/src/story/: title_bar.rs
crates/auto-ui/src/style/: class.rs  color.rs  gpui_adapter.rs  iced_adapter.rs  mod.rs  parser.rs
crates/auto-ui/src/trans/: api.rs  auto_ui_trans.rs  auto_ui_trans.rs.bak  mod.rs  rust_gen.rs  templates.rs
crates/auto-ui/src/widgets/: story.rs  table.rs
crates/auto-ui/tests/: hot_reload_test.rs  integration_test.rs  node_converter_test.rs  transpiler_test.rs  vnode_integration_test.rs
crates/autogui/: Cargo.toml
crates/autogui/examples/: auto.rs  button.rs  checkbox.rs  counter.rs  drop_file.rs  elems.rs  form.rs  hello_world.rs  icon.rs  input.rs  list.rs  login.rs  radio.rs  slider.rs  table.rs  tabs.rs  workspace.rs
crates/autogui/src/: app.rs  assets.rs  event.rs  indicator.rs  lib.rs  ui.rs
crates/autogui/src/style/: color.rs  mod.rs  size.rs  theme.rs
crates/autogui/src/widget/: button.rs  checkbox.rs  dropdown.rs  dropzone.rs  icon.rs  list.rs  mod.rs  my_input.rs  pane.rs  radio.rs  scroll.rs  slider.rs  table.rs  theme_toggle.rs  toolbar.rs  util.rs  workspace.rs
crates/autogui/src/widget/input/: blink_cursor.rs  change.rs  clear_button.rs  history.rs  input.rs  mod.rs
crates/autogui/src/widget/tab/: mod.rs  tab.rs  tab_bar.rs  tab_pane.rs  tab_view.rs
crates/autoui/: Cargo.toml
crates/autoui/examples/: app.at  app.rs  auto.rs  button.rs  checkbox.rs  counter.at  counter.rs  dyna.rs  dynamic.rs  elems.rs  form.rs  hello.at  hello_world.rs  icon.rs  input.rs  list.rs  login.rs  pane.rs  radio.rs  slider.rs  table.at  table.rs  tabs.at  tabs.rs  workspace.rs
crates/autoui/src/: app.rs  indicator.rs  lib.rs  main.rs  spec.rs  ui.rs
crates/autoui/src/dyna/: app.rs  dyna.rs  mod.rs  simple.rs  state.rs  view.rs
crates/autoui/src/style/: color.rs  mod.rs  size.rs  theme.rs
crates/autoui/src/theme/: color.rs  mod.rs
crates/autoui/src/widget/: button.rs  card.rs  checkbox.rs  dropdown.rs  dynamic.rs  field.rs  icon.rs  input.rs  label.rs  list.rs  mod.rs  my_input.rs  pane.rs  radio.rs  slider.rs  theme_toggle.rs  toolbar.rs  util.rs  widget.rs  workspace.rs
crates/autoui/src/widget/input/: change.rs  clear_button.rs  input.rs  mod.rs
crates/gpui-examples/: Cargo.toml  README.md  run-gallery.bat
crates/gpui-examples/src/: gallery.rs  lib.rs  main.rs
crates/gpui-examples/src/stories/: button_story.rs  checkbox_story.rs  mod.rs  select_story.rs  welcome_story.rs
crates/gpui-widgets/: Cargo.toml
crates/gpui-widgets/src/: button.rs  color.rs  icon.rs  lib.rs  pane.rs  text.rs  theme.rs
crates/iced-examples/: Cargo.toml  README.md
crates/iced-examples/src/: gallery.rs  main.rs  navigation.rs
crates/iced-examples/src/page/: button.rs  checkbox.rs  circle.rs  counter.rs  dropdown.rs  hello.rs  home.rs  layout.rs  mod.rs  progress.rs  select.rs  slider.rs  todos.rs
crates/iced-examples/src/theme/: dark.rs  light.rs  mod.rs  theme.rs
docs/: COMMAND_RUN.md  ERROR_REPORTING.md  GPUI_TROUBLESHOOTING.md  LAYOUT_GUIDE.md  QUICKSTART_GPUI.md  RUNNING_GENERATED_CODE.md  RUN_COMMAND.md  RUN_QUICKSTART.md  UI_COMPONENTS.md  auto-message-conversion.md  phase1-abstraction-implementation.md  phase1-summary.md  phase2-progress.md  unified-app-design.md
examples/: README.md  runtime_counter.rs  transpile_counter.rs  unified_app.rs
examples/interpreter-gpui-demo/: Cargo.toml  counter.at
examples/interpreter-gpui-demo/src/: main.rs
examples/interpreter-gpui-minimal/: Cargo.toml  simple.at
examples/interpreter-gpui-minimal/src/: main.rs
examples/interpreter-gpui-simple/: Cargo.toml  simple.at
examples/interpreter-gpui-simple/src/: main.rs
examples/interpreter-test/: Cargo.toml  counter.at
examples/interpreter-test/src/: main.rs
examples/test-button-simple/: Cargo.toml
examples/test-button-simple/src/: main.rs
examples/unified-sidebar/: Cargo.toml
examples/unified-sidebar/src/: main.rs
examples/unified-temp_converter/: Cargo.toml
examples/unified-temp_converter/src/: main.rs
examples/unified-todos/: Cargo.toml
examples/unified-todos/src/: main.rs
scratch/: advanced_layout.at  advanced_layout.rs  button.at  col_test.at  col_test.rs  counter.at  counter_demo.at  counter_final.at  counter_full.at  counter_full_transpiled.rs  counter_inc.at  counter_inc.rs  counter_v2.at  counter_v2.rs  counter_view_only.at  counter_view_only.rs  enum_test.at  error_test.at  hello.at  hello_basic.at  (+36 more)
(+129 files in other folders)
