[package]
name = "auto-ui-iced-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[[bin]]
name = "todo"
path = "src/bin/todo.rs"

[[bin]]
name = "temp_converter"
path = "src/bin/temp_converter.rs"

[[bin]]
name = "container_demo"
path = "src/bin/container_demo.rs"

[[bin]]
name = "scroll_demo"
path = "src/bin/scroll_demo.rs"

[[bin]]
name = "radio_demo"
path = "src/bin/radio_demo.rs"

[[bin]]
name = "select_demo"
path = "src/bin/select_demo.rs"

[[bin]]
name = "list_demo"
path = "src/bin/list_demo.rs"

[[bin]]
name = "input_demo"
path = "src/bin/input_demo.rs"

[[bin]]
name = "table_demo"
path = "src/bin/table_demo.rs"

[dependencies]
iced = { workspace = true }
auto-ui = { workspace = true }
auto-ui-iced = { path = "../auto-ui-iced" }

# 强制启用 naga 的 termcolor feature 以避免 Windows WriteColor trait 错误
naga = { version = "27.0.3", features = ["termcolor"] }
