[package]
name = "auto-ui-transpiler-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool to transpile Auto language (.at) files to AutoUI Rust code"

[[bin]]
name = "auto-ui-transpile"
path = "src/main.rs"

[dependencies]
auto-ui = { path = "../auto-ui", features = ["transpiler"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
console = "0.15"
notify = "6.0"
notify-debouncer-mini = "0.4"
regex = "1.10"

[features]
default = ["transpiler"]
transpiler = ["auto-ui/transpiler"]
