[package]
name = "auto-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Auto language support for parsing .at files (optional)
auto-lang = { path = "../../../auto-lang/crates/auto-lang", optional = true }
auto-val = { path = "../../../auto-lang/crates/auto-val", optional = true }

# Optional backend dependencies for style adapters
gpui-lib = { version = "0.2.2", optional = true, package = "gpui" }

[features]
default = []
gpui = ["dep:gpui-lib"]  # Enable GPUI backend adapter
# iced = ["dep:iced"]  # Enable Iced backend adapter (TODO: add iced dependency)
transpiler = ["auto-lang", "auto-val"]  # Auto language transpiler support

