[package]
name = "autogui"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["dylib"]

[dependencies]
auto-lang = { workspace = true }
auto-val = { workspace = true }
gpui = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
smallvec = { workspace = true }
unicode-segmentation = { workspace = true }
regex = { workspace = true }
