[package]
name = "autoui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
paste = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
smallvec = { workspace = true }
unicode-segmentation = { workspace = true }
regex = { workspace = true }