[package]
name = "gpui-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[[bin]]
name = "button"
path = "src/bin/button.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = { workspace = true }
anyhow = "1.0"
