[package]
name = "iced-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[[bin]]
name = "button"
path = "src/bin/button.rs"

[[bin]]
name = "checkbox"
path = "src/bin/checkbox.rs"

[[bin]]
name = "circle"
path = "src/bin/circle.rs"

[[bin]]
name = "dropdown"
path = "src/bin/dropdown.rs"

[dependencies]
iced = { workspace = true }

# 强制启用 naga 的 termcolor feature 以避免 Windows WriteColor trait 错误
naga = { version = "27.0.3", features = ["termcolor"] }
