[package]
name = "interpreter-test"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-ui = { path = "../../crates/auto-ui", features = ["interpreter"] }
auto-ui-gpui = { path = "../../crates/auto-ui-gpui", features = ["interpreter"] }
gpui = { version = "0.2.2" }

[features]
default = ["gpui"]
gpui = []
