[package]
name = "unified-temp_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-ui = { path = "../../crates/auto-ui" }

auto-ui-iced = { path = "../../crates/auto-ui-iced", optional = true }
auto-ui-gpui = { path = "../../crates/auto-ui-gpui", optional = true }

[features]
default = ["gpui"]

iced = ["auto-ui-iced"]
gpui = ["auto-ui-gpui"]
