[package]
name = "unified-todos"
version = "0.1.0"
edition = "2021"

[dependencies]
auto-ui = { path = "../../crates/auto-ui" }

# Backend dependencies - enabled via features
auto-ui-iced = { path = "../../crates/auto-ui-iced", optional = true }
auto-ui-gpui = { path = "../../crates/auto-ui-gpui", optional = true }

[features]
default = ["iced"]
iced = ["auto-ui-iced"]
gpui = ["auto-ui-gpui"]
